<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="#9B9B9B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/timer_title"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="79dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:text="@string/laps"
            android:textSize="16sp"
            android:textColor="#9B9B9B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/timer_laps"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:inputType="numberSigned"
            android:layout_marginLeft="79dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:text="@string/intervals"
            android:textSize="16sp"
            android:textColor="#9B9B9B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="79dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_interval"
                android:text="@string/add_an_interval"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="56dp" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/intervals_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>